--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,13 @@
+[profile.release]
+overflow-checks = true
+lto = "fat"
+codegen-units = 1
+strip = true
+[profile.release.build-override]
+opt-level = 3
+incremental = false
+codegen-units = 1
+
 [workspace]
 resolver = "3"
 members = [
